ICG/y.output
Terminals unused in grammar

   PTR_OP
   TYPEDEF
   EXTERN
   STATIC
   AUTO
   REGISTER
   CONST
   VOLATILE
   STRUCT
   UNION
   ENUM
   CASE
   DEFAULT
   SWITCH
   GOTO
   CONTINUE
   BREAK
   RETURN
   FOR1
   FOR2


Rules useless in parser due to conflicts

  155 $@22: %empty


State 51 conflicts: 1 shift/reduce


Grammar

    0 $accept: translation_unit $end

    1 primary_expression: IDENTIFIER
    2                   | CONSTANT
    3                   | STRING_LITERAL
    4                   | '(' expression ')'

    5 postfix_expression: primary_expression
    6                   | postfix_expression '[' expression ']'
    7                   | postfix_expression '(' ')'
    8                   | postfix_expression '(' argument_expression_list ')'
    9                   | postfix_expression '.' IDENTIFIER
   10                   | postfix_expression INC_OP
   11                   | postfix_expression DEC_OP

   12 argument_expression_list: assignment_expression
   13                         | argument_expression_list ',' assignment_expression

   14 unary_expression: postfix_expression

   15 $@1: %empty

   16 unary_expression: INC_OP $@1 unary_expression

   17 $@2: %empty

   18 unary_expression: DEC_OP $@2 unary_expression
   19                 | unary_operator unary_expression
   20                 | SIZEOF unary_expression
   21                 | SIZEOF '(' type_name ')'

   22 unary_operator: '&'
   23               | '*'
   24               | '+'
   25               | '-'
   26               | '~'
   27               | '!'

   28 multiplicative_expression: unary_expression

   29 $@3: %empty

   30 multiplicative_expression: multiplicative_expression '*' $@3 unary_expression

   31 $@4: %empty

   32 multiplicative_expression: multiplicative_expression '/' $@4 unary_expression

   33 $@5: %empty

   34 multiplicative_expression: multiplicative_expression '%' $@5 unary_expression

   35 additive_expression: multiplicative_expression

   36 $@6: %empty

   37 additive_expression: additive_expression '+' $@6 multiplicative_expression

   38 $@7: %empty

   39 additive_expression: additive_expression '-' $@7 multiplicative_expression

   40 shift_expression: additive_expression

   41 $@8: %empty

   42 shift_expression: shift_expression LEFT_OP $@8 additive_expression

   43 $@9: %empty

   44 shift_expression: shift_expression RIGHT_OP $@9 additive_expression

   45 relational_expression: shift_expression

   46 $@10: %empty

   47 relational_expression: relational_expression '<' $@10 shift_expression

   48 $@11: %empty

   49 relational_expression: relational_expression '>' $@11 shift_expression

   50 $@12: %empty

   51 relational_expression: relational_expression LE_OP $@12 shift_expression

   52 $@13: %empty

   53 relational_expression: relational_expression GE_OP $@13 shift_expression

   54 equality_expression: relational_expression

   55 $@14: %empty

   56 equality_expression: equality_expression EQ_OP $@14 relational_expression

   57 $@15: %empty

   58 equality_expression: equality_expression NE_OP $@15 relational_expression

   59 and_expression: equality_expression
   60               | and_expression '&' equality_expression

   61 exclusive_or_expression: and_expression
   62                        | exclusive_or_expression '^' and_expression

   63 inclusive_or_expression: exclusive_or_expression
   64                        | inclusive_or_expression '|' exclusive_or_expression

   65 logical_and_expression: inclusive_or_expression
   66                       | logical_and_expression AND_OP inclusive_or_expression

   67 logical_or_expression: logical_and_expression
   68                      | logical_or_expression OR_OP logical_and_expression

   69 conditional_expression: logical_or_expression
   70                       | logical_or_expression '?' expression ':' conditional_expression

   71 assignment_expression: conditional_expression
   72                      | unary_expression assignment_operator assignment_expression

   73 assignment_operator: '='
   74                    | MUL_ASSIGN
   75                    | DIV_ASSIGN
   76                    | MOD_ASSIGN
   77                    | ADD_ASSIGN
   78                    | SUB_ASSIGN
   79                    | LEFT_ASSIGN
   80                    | RIGHT_ASSIGN
   81                    | AND_ASSIGN
   82                    | XOR_ASSIGN
   83                    | OR_ASSIGN

   84 expression: assignment_expression
   85           | expression ',' assignment_expression

   86 constant_expression: conditional_expression

   87 declaration: declaration_specifiers ';'
   88            | declaration_specifiers init_declarator_list ';'

   89 declaration_specifiers: type_specifier
   90                       | type_specifier declaration_specifiers

   91 init_declarator_list: init_declarator
   92                     | init_declarator_list ',' init_declarator

   93 init_declarator: declarator

   94 $@16: %empty

   95 init_declarator: declarator '=' $@16 initializer

   96 type_specifier: VOID
   97               | CHAR
   98               | SHORT
   99               | INT
  100               | LONG
  101               | FLOAT
  102               | DOUBLE
  103               | SIGNED
  104               | UNSIGNED
  105               | TYPE_NAME

  106 specifier_qualifier_list: type_specifier specifier_qualifier_list
  107                         | type_specifier

  108 declarator: direct_declarator

  109 direct_declarator: IDENTIFIER
  110                  | '(' declarator ')'
  111                  | direct_declarator '[' constant_expression ']'
  112                  | direct_declarator '[' ']'
  113                  | direct_declarator '(' parameter_type_list ')'
  114                  | direct_declarator '(' identifier_list ')'
  115                  | direct_declarator '(' ')'

  116 parameter_type_list: parameter_list
  117                    | parameter_list ',' ELLIPSIS

  118 parameter_list: parameter_declaration
  119               | parameter_list ',' parameter_declaration

  120 parameter_declaration: declaration_specifiers declarator
  121                      | declaration_specifiers

  122 identifier_list: IDENTIFIER
  123                | identifier_list ',' IDENTIFIER

  124 type_name: specifier_qualifier_list

  125 initializer: assignment_expression
  126            | '{' initializer_list '}'
  127            | '{' initializer_list ',' '}'

  128 initializer_list: initializer
  129                 | initializer_list ',' initializer

  130 statement: compound_statement
  131          | expression_statement
  132          | selection_statement
  133          | iteration_statement

  134 compound_statement: '{' '}'
  135                   | '{' statement_list '}'
  136                   | '{' declaration_list '}'
  137                   | '{' declaration_list statement_list '}'

  138 declaration_list: declaration
  139                 | declaration_list declaration

  140 statement_list: statement
  141               | statement_list statement

  142 expression_statement: ';'
  143                     | expression ';'

  144 selection_statement: IF '(' expression ')' statement
  145                    | IF '(' expression ')' statement ELSE statement

  146 $@17: %empty

  147 $@18: %empty

  148 iteration_statement: WHILE $@17 '(' expression ')' $@18 statement
  149                    | DO statement WHILE '(' expression ')' ';'
  150                    | for_without_last

  151 $@19: %empty

  152 $@20: %empty

  153 $@21: %empty

  154 iteration_statement: FOR '(' expression_statement $@19 expression_statement $@20 expression ')' $@21 statement

  155 $@22: %empty

  156 $@23: %empty

  157 $@24: %empty

  158 for_without_last: FOR $@22 '(' expression_statement expression_statement $@23 ')' $@24 statement

  159 translation_unit: external_declaration
  160                 | translation_unit external_declaration

  161 external_declaration: function_definition
  162                     | declaration

  163 function_definition: declaration_specifiers declarator declaration_list compound_statement
  164                    | declaration_specifiers declarator compound_statement
  165                    | declarator declaration_list compound_statement
  166                    | declarator compound_statement


Terminals, with rules where they appear

$end (0) 0
'!' (33) 27
'%' (37) 34
'&' (38) 22 60
'(' (40) 4 7 8 21 110 113 114 115 144 145 148 149 154 158
')' (41) 4 7 8 21 110 113 114 115 144 145 148 149 154 158
'*' (42) 23 30
'+' (43) 24 37
',' (44) 13 85 92 117 119 123 127 129
'-' (45) 25 39
'.' (46) 9
'/' (47) 32
':' (58) 70
';' (59) 87 88 142 143 149
'<' (60) 47
'=' (61) 73 95
'>' (62) 49
'?' (63) 70
'[' (91) 6 111 112
']' (93) 6 111 112
'^' (94) 62
'{' (123) 126 127 134 135 136 137
'|' (124) 64
'}' (125) 126 127 134 135 136 137
'~' (126) 26
error (256)
IDENTIFIER (258) 1 9 109 122 123
CONSTANT (259) 2
STRING_LITERAL (260) 3
SIZEOF (261) 20 21
PTR_OP (262)
INC_OP (263) 10 16
DEC_OP (264) 11 18
LEFT_OP (265) 42
RIGHT_OP (266) 44
LE_OP (267) 51
GE_OP (268) 53
EQ_OP (269) 56
NE_OP (270) 58
AND_OP (271) 66
OR_OP (272) 68
MUL_ASSIGN (273) 74
DIV_ASSIGN (274) 75
MOD_ASSIGN (275) 76
ADD_ASSIGN (276) 77
SUB_ASSIGN (277) 78
LEFT_ASSIGN (278) 79
RIGHT_ASSIGN (279) 80
AND_ASSIGN (280) 81
XOR_ASSIGN (281) 82
OR_ASSIGN (282) 83
TYPE_NAME (283) 105
TYPEDEF (284)
EXTERN (285)
STATIC (286)
AUTO (287)
REGISTER (288)
CHAR (289) 97
SHORT (290) 98
INT (291) 99
LONG (292) 100
SIGNED (293) 103
UNSIGNED (294) 104
FLOAT (295) 101
DOUBLE (296) 102
CONST (297)
VOLATILE (298)
VOID (299) 96
STRUCT (300)
UNION (301)
ENUM (302)
ELLIPSIS (303) 117
CASE (304)
DEFAULT (305)
IF (306) 144 145
ELSE (307) 145
SWITCH (308)
WHILE (309) 148 149
DO (310) 149
FOR (311) 154 158
GOTO (312)
CONTINUE (313)
BREAK (314)
RETURN (315)
IFX (316)
FOR1 (317)
FOR2 (318)


Nonterminals, with rules where they appear

$accept (88)
    on left: 0
primary_expression (89)
    on left: 1 2 3 4, on right: 5
postfix_expression (90)
    on left: 5 6 7 8 9 10 11, on right: 6 7 8 9 10 11 14
argument_expression_list (91)
    on left: 12 13, on right: 8 13
unary_expression (92)
    on left: 14 16 18 19 20 21, on right: 16 18 19 20 28 30 32 34 72
$@1 (93)
    on left: 15, on right: 16
$@2 (94)
    on left: 17, on right: 18
unary_operator (95)
    on left: 22 23 24 25 26 27, on right: 19
multiplicative_expression (96)
    on left: 28 30 32 34, on right: 30 32 34 35 37 39
$@3 (97)
    on left: 29, on right: 30
$@4 (98)
    on left: 31, on right: 32
$@5 (99)
    on left: 33, on right: 34
additive_expression (100)
    on left: 35 37 39, on right: 37 39 40 42 44
$@6 (101)
    on left: 36, on right: 37
$@7 (102)
    on left: 38, on right: 39
shift_expression (103)
    on left: 40 42 44, on right: 42 44 45 47 49 51 53
$@8 (104)
    on left: 41, on right: 42
$@9 (105)
    on left: 43, on right: 44
relational_expression (106)
    on left: 45 47 49 51 53, on right: 47 49 51 53 54 56 58
$@10 (107)
    on left: 46, on right: 47
$@11 (108)
    on left: 48, on right: 49
$@12 (109)
    on left: 50, on right: 51
$@13 (110)
    on left: 52, on right: 53
equality_expression (111)
    on left: 54 56 58, on right: 56 58 59 60
$@14 (112)
    on left: 55, on right: 56
$@15 (113)
    on left: 57, on right: 58
and_expression (114)
    on left: 59 60, on right: 60 61 62
exclusive_or_expression (115)
    on left: 61 62, on right: 62 63 64
inclusive_or_expression (116)
    on left: 63 64, on right: 64 65 66
logical_and_expression (117)
    on left: 65 66, on right: 66 67 68
logical_or_expression (118)
    on left: 67 68, on right: 68 69 70
conditional_expression (119)
    on left: 69 70, on right: 70 71 86
assignment_expression (120)
    on left: 71 72, on right: 12 13 72 84 85 125
assignment_operator (121)
    on left: 73 74 75 76 77 78 79 80 81 82 83, on right: 72
expression (122)
    on left: 84 85, on right: 4 6 70 85 143 144 145 148 149 154
constant_expression (123)
    on left: 86, on right: 111
declaration (124)
    on left: 87 88, on right: 138 139 162
declaration_specifiers (125)
    on left: 89 90, on right: 87 88 90 120 121 163 164
init_declarator_list (126)
    on left: 91 92, on right: 88 92
init_declarator (127)
    on left: 93 95, on right: 91 92
$@16 (128)
    on left: 94, on right: 95
type_specifier (129)
    on left: 96 97 98 99 100 101 102 103 104 105, on right: 89 90 106
    107
specifier_qualifier_list (130)
    on left: 106 107, on right: 106 124
declarator (131)
    on left: 108, on right: 93 95 110 120 163 164 165 166
direct_declarator (132)
    on left: 109 110 111 112 113 114 115, on right: 108 111 112 113
    114 115
parameter_type_list (133)
    on left: 116 117, on right: 113
parameter_list (134)
    on left: 118 119, on right: 116 117 119
parameter_declaration (135)
    on left: 120 121, on right: 118 119
identifier_list (136)
    on left: 122 123, on right: 114 123
type_name (137)
    on left: 124, on right: 21
initializer (138)
    on left: 125 126 127, on right: 95 128 129
initializer_list (139)
    on left: 128 129, on right: 126 127 129
statement (140)
    on left: 130 131 132 133, on right: 140 141 144 145 148 149 154
    158
compound_statement (141)
    on left: 134 135 136 137, on right: 130 163 164 165 166
declaration_list (142)
    on left: 138 139, on right: 136 137 139 163 165
statement_list (143)
    on left: 140 141, on right: 135 137 141
expression_statement (144)
    on left: 142 143, on right: 131 154 158
selection_statement (145)
    on left: 144 145, on right: 132
iteration_statement (146)
    on left: 148 149 150 154, on right: 133
$@17 (147)
    on left: 146, on right: 148
$@18 (148)
    on left: 147, on right: 148
$@19 (149)
    on left: 151, on right: 154
$@20 (150)
    on left: 152, on right: 154
$@21 (151)
    on left: 153, on right: 154
for_without_last (152)
    on left: 158, on right: 150
$@22 (153)
    on left: 155, on right: 158
$@23 (154)
    on left: 156, on right: 158
$@24 (155)
    on left: 157, on right: 158
translation_unit (156)
    on left: 159 160, on right: 0 160
external_declaration (157)
    on left: 161 162, on right: 159 160
function_definition (158)
    on left: 163 164 165 166, on right: 161


State 0

    0 $accept: . translation_unit $end

    IDENTIFIER  shift, and go to state 1
    TYPE_NAME   shift, and go to state 2
    CHAR        shift, and go to state 3
    SHORT       shift, and go to state 4
    INT         shift, and go to state 5
    LONG        shift, and go to state 6
    SIGNED      shift, and go to state 7
    UNSIGNED    shift, and go to state 8
    FLOAT       shift, and go to state 9
    DOUBLE      shift, and go to state 10
    VOID        shift, and go to state 11
    '('         shift, and go to state 12

    declaration             go to state 13
    declaration_specifiers  go to state 14
    type_specifier          go to state 15
    declarator              go to state 16
    direct_declarator       go to state 17
    translation_unit        go to state 18
    external_declaration    go to state 19
    function_definition     go to state 20


State 1

  109 direct_declarator: IDENTIFIER .

    $default  reduce using rule 109 (direct_declarator)


State 2

  105 type_specifier: TYPE_NAME .

    $default  reduce using rule 105 (type_specifier)


State 3

   97 type_specifier: CHAR .

    $default  reduce using rule 97 (type_specifier)


State 4

   98 type_specifier: SHORT .

    $default  reduce using rule 98 (type_specifier)


State 5

   99 type_specifier: INT .

    $default  reduce using rule 99 (type_specifier)


State 6

  100 type_specifier: LONG .

    $default  reduce using rule 100 (type_specifier)


State 7

  103 type_specifier: SIGNED .

    $default  reduce using rule 103 (type_specifier)


State 8

  104 type_specifier: UNSIGNED .

    $default  reduce using rule 104 (type_specifier)


State 9

  101 type_specifier: FLOAT .

    $default  reduce using rule 101 (type_specifier)


State 10

  102 type_specifier: DOUBLE .

    $default  reduce using rule 102 (type_specifier)


State 11

   96 type_specifier: VOID .

    $default  reduce using rule 96 (type_specifier)


State 12

  110 direct_declarator: '(' . declarator ')'

    IDENTIFIER  shift, and go to state 1
    '('         shift, and go to state 12

    declarator         go to state 21
    direct_declarator  go to state 17


State 13

  162 external_declaration: declaration .

    $default  reduce using rule 162 (external_declaration)


State 14

   87 declaration: declaration_specifiers . ';'
   88            | declaration_specifiers . init_declarator_list ';'
  163 function_definition: declaration_specifiers . declarator declaration_list compound_statement
  164                    | declaration_specifiers . declarator compound_statement

    IDENTIFIER  shift, and go to state 1
    '('         shift, and go to state 12
    ';'         shift, and go to state 22

    init_declarator_list  go to state 23
    init_declarator       go to state 24
    declarator            go to state 25
    direct_declarator     go to state 17


State 15

   89 declaration_specifiers: type_specifier .
   90                       | type_specifier . declaration_specifiers

    TYPE_NAME  shift, and go to state 2
    CHAR       shift, and go to state 3
    SHORT      shift, and go to state 4
    INT        shift, and go to state 5
    LONG       shift, and go to state 6
    SIGNED     shift, and go to state 7
    UNSIGNED   shift, and go to state 8
    FLOAT      shift, and go to state 9
    DOUBLE     shift, and go to state 10
    VOID       shift, and go to state 11

    $default  reduce using rule 89 (declaration_specifiers)

    declaration_specifiers  go to state 26
    type_specifier          go to state 15


State 16

  165 function_definition: declarator . declaration_list compound_statement
  166                    | declarator . compound_statement

    TYPE_NAME  shift, and go to state 2
    CHAR       shift, and go to state 3
    SHORT      shift, and go to state 4
    INT        shift, and go to state 5
    LONG       shift, and go to state 6
    SIGNED     shift, and go to state 7
    UNSIGNED   shift, and go to state 8
    FLOAT      shift, and go to state 9
    DOUBLE     shift, and go to state 10
    VOID       shift, and go to state 11
    '{'        shift, and go to state 27

    declaration             go to state 28
    declaration_specifiers  go to state 29
    type_specifier          go to state 15
    compound_statement      go to state 30
    declaration_list        go to state 31


State 17

  108 declarator: direct_declarator .
  111 direct_declarator: direct_declarator . '[' constant_expression ']'
  112                  | direct_declarator . '[' ']'
  113                  | direct_declarator . '(' parameter_type_list ')'
  114                  | direct_declarator . '(' identifier_list ')'
  115                  | direct_declarator . '(' ')'

    '('  shift, and go to state 32
    '['  shift, and go to state 33

    $default  reduce using rule 108 (declarator)


State 18

    0 $accept: translation_unit . $end
  160 translation_unit: translation_unit . external_declaration

    $end        shift, and go to state 34
    IDENTIFIER  shift, and go to state 1
    TYPE_NAME   shift, and go to state 2
    CHAR        shift, and go to state 3
    SHORT       shift, and go to state 4
    INT         shift, and go to state 5
    LONG        shift, and go to state 6
    SIGNED      shift, and go to state 7
    UNSIGNED    shift, and go to state 8
    FLOAT       shift, and go to state 9
    DOUBLE      shift, and go to state 10
    VOID        shift, and go to state 11
    '('         shift, and go to state 12

    declaration             go to state 13
    declaration_specifiers  go to state 14
    type_specifier          go to state 15
    declarator              go to state 16
    direct_declarator       go to state 17
    external_declaration    go to state 35
    function_definition     go to state 20


State 19

  159 translation_unit: external_declaration .

    $default  reduce using rule 159 (translation_unit)


State 20

  161 external_declaration: function_definition .

    $default  reduce using rule 161 (external_declaration)


State 21

  110 direct_declarator: '(' declarator . ')'

    ')'  shift, and go to state 36


State 22

   87 declaration: declaration_specifiers ';' .

    $default  reduce using rule 87 (declaration)


State 23

   88 declaration: declaration_specifiers init_declarator_list . ';'
   92 init_declarator_list: init_declarator_list . ',' init_declarator

    ','  shift, and go to state 37
    ';'  shift, and go to state 38


State 24

   91 init_declarator_list: init_declarator .

    $default  reduce using rule 91 (init_declarator_list)


State 25

   93 init_declarator: declarator .
   95                | declarator . '=' $@16 initializer
  163 function_definition: declaration_specifiers declarator . declaration_list compound_statement
  164                    | declaration_specifiers declarator . compound_statement

    TYPE_NAME  shift, and go to state 2
    CHAR       shift, and go to state 3
    SHORT      shift, and go to state 4
    INT        shift, and go to state 5
    LONG       shift, and go to state 6
    SIGNED     shift, and go to state 7
    UNSIGNED   shift, and go to state 8
    FLOAT      shift, and go to state 9
    DOUBLE     shift, and go to state 10
    VOID       shift, and go to state 11
    '='        shift, and go to state 39
    '{'        shift, and go to state 27

    $default  reduce using rule 93 (init_declarator)

    declaration             go to state 28
    declaration_specifiers  go to state 29
    type_specifier          go to state 15
    compound_statement      go to state 40
    declaration_list        go to state 41


State 26

   90 declaration_specifiers: type_specifier declaration_specifiers .

    $default  reduce using rule 90 (declaration_specifiers)


State 27

  134 compound_statement: '{' . '}'
  135                   | '{' . statement_list '}'
  136                   | '{' . declaration_list '}'
  137                   | '{' . declaration_list statement_list '}'

    IDENTIFIER      shift, and go to state 42
    CONSTANT        shift, and go to state 43
    STRING_LITERAL  shift, and go to state 44
    SIZEOF          shift, and go to state 45
    INC_OP          shift, and go to state 46
    DEC_OP          shift, and go to state 47
    TYPE_NAME       shift, and go to state 2
    CHAR            shift, and go to state 3
    SHORT           shift, and go to state 4
    INT             shift, and go to state 5
    LONG            shift, and go to state 6
    SIGNED          shift, and go to state 7
    UNSIGNED        shift, and go to state 8
    FLOAT           shift, and go to state 9
    DOUBLE          shift, and go to state 10
    VOID            shift, and go to state 11
    IF              shift, and go to state 48
    WHILE           shift, and go to state 49
    DO              shift, and go to state 50
    FOR             shift, and go to state 51
    '('             shift, and go to state 52
    '&'             shift, and go to state 53
    '*'             shift, and go to state 54
    '+'             shift, and go to state 55
    '-'             shift, and go to state 56
    '~'             shift, and go to state 57
    '!'             shift, and go to state 58
    ';'             shift, and go to state 59
    '{'             shift, and go to state 27
    '}'             shift, and go to state 60

    primary_expression         go to state 61
    postfix_expression         go to state 62
    unary_expression           go to state 63
    unary_operator             go to state 64
    multiplicative_expression  go to state 65
    additive_expression        go to state 66
    shift_expression           go to state 67
    relational_expression      go to state 68
    equality_expression        go to state 69
    and_expression             go to state 70
    exclusive_or_expression    go to state 71
    inclusive_or_expression    go to state 72
    logical_and_expression     go to state 73
    logical_or_expression      go to state 74
    conditional_expression     go to state 75
    assignment_expression      go to state 76
    expression                 go to state 77
    declaration                go to state 28
    declaration_specifiers     go to state 29
    type_specifier             go to state 15
    statement                  go to state 78
    compound_statement         go to state 79
    declaration_list           go to state 80
    statement_list             go to state 81
    expression_statement       go to state 82
    selection_statement        go to state 83
    iteration_statement        go to state 84
    for_without_last           go to state 85


State 28

  138 declaration_list: declaration .

    $default  reduce using rule 138 (declaration_list)


State 29

   87 declaration: declaration_specifiers . ';'
   88            | declaration_specifiers . init_declarator_list ';'

    IDENTIFIER  shift, and go to state 1
    '('         shift, and go to state 12
    ';'         shift, and go to state 22

    init_declarator_list  go to state 23
    init_declarator       go to state 24
    declarator            go to state 86
    direct_declarator     go to state 17


State 30

  166 function_definition: declarator compound_statement .

    $default  reduce using rule 166 (function_definition)


State 31

  139 declaration_list: declaration_list . declaration
  165 function_definition: declarator declaration_list . compound_statement

    TYPE_NAME  shift, and go to state 2
    CHAR       shift, and go to state 3
    SHORT      shift, and go to state 4
    INT        shift, and go to state 5
    LONG       shift, and go to state 6
    SIGNED     shift, and go to state 7
    UNSIGNED   shift, and go to state 8
    FLOAT      shift, and go to state 9
    DOUBLE     shift, and go to state 10
    VOID       shift, and go to state 11
    '{'        shift, and go to state 27

    declaration             go to state 87
    declaration_specifiers  go to state 29
    type_specifier          go to state 15
    compound_statement      go to state 88


State 32

  113 direct_declarator: direct_declarator '(' . parameter_type_list ')'
  114                  | direct_declarator '(' . identifier_list ')'
  115                  | direct_declarator '(' . ')'
